--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1>this is idk what dis is </h1>
-
+    <header>
+        <h1>this is idk what dis is</h1>
+        <nav>
+          <button class="btn">Button 1</button>
+          <button class="btn">Button 2</button>
+          <button class="btn">Button 3</button>
+        </nav>
+      </header>
 </body>
 </html>
