idk, but it worked

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <header>
         <h1></h1>
         <nav>
-          <button class="btn">Button 1</button>
-          <button class="btn">Button 2</button>
-          <button class="btn">Button 3</button>
+          <button class="btn">:3</button>
+          <button class="btn">>:3</button>
+          <button class="btn">:'3</button>
         </nav>
       </header>
 </body>
