--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
 </head>
 <body>
     <header>
-        <h1></h1>
         <nav>
           <button class="btn">:3</button>
           <button class="btn">>:3</button>
           <button class="btn">:'3</button>
+        </nav>
+      </header>
+
+      <header>
+        <nav>
+            <button class="btn">:D</button>
+            <button class="btn">>:D</button>
+            <button class="btn">:'D</button>
         </nav>
       </header>
 </body>
